# ml-food-recognition

./: .gitignore  .gitlab-ci.yml  InstallTensorflowGpu.sh  README.md  deep-learning-tutorial-for-beginners.ipynb  docker-compose.yml  neural_network.py  predict.py  pyproject.toml  requirements.txt  train_cnn_pre.py
darkflow/: Dockerfile  flask_server.py  try.py  yolov2-food100.weights
example/: requirements.txt  train_img_net.py
example_notebook/: Food Classification with Deep Learning in Keras.ipynb  Food Classification with Deep Learning in Keras.md
yolo/: .dockerignore  Dockerfile  food100.data  food100_split_for_yolo.py  notes.txt  pizza.txt  test.txt  train.txt  try.py
yolo/yololabels/: pizza.txt
