[tool.poetry]
name = "cnn_keras"
version = "0.1.0"
description = "ML Python Sripts for CNN"
authors = ["João Marques <joao.marques.contacto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keras = "^2.3.1"
numpy = "^1.18.1"
matplotlib = "^3.2.0"
scikit-image = "^0.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
